<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/fundal2">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_texteditfield">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editer"
                android:id="@+id/idTextDetailsPersonnele"
                android:textSize="23sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/errorMessage"
                android:background="@drawable/custom_texteditfield"
                android:drawableStart="@drawable/ic_error_24px"
                android:hint="@string/error"
                android:padding="8dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/nomEditDetailsPersonnele"
                android:background="@drawable/custom_texteditfield"
                android:drawableLeft="@drawable/ic_user_24px"
                android:drawablePadding="8dp"
                android:hint="@string/nom"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/emailEditDetailsPersonnele"
                android:background="@drawable/custom_texteditfield"
                android:drawableLeft="@drawable/ic_email_24px"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/telephoneEditDetailsPersonnele"
                android:background="@drawable/custom_texteditfield"
                android:drawableLeft="@drawable/ic_telephone_24px"
                android:drawablePadding="8dp"
                android:hint="@string/numero"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/dateEditDetailsPersonnele"
                android:background="@drawable/custom_texteditfield"
                android:drawableLeft="@drawable/ic_calendar_24px"
                android:drawablePadding="8dp"
                android:hint="@string/yyyy_mm_dd"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/btnFinishEdit"
                android:text="@string/finish"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/white"
                app:cornerRadius = "20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/btnMenu"
                android:text="@string/back_to_menu"
                android:textSize="18sp"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/white"
                app:cornerRadius = "20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>