<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/fundal2">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_texteditfield">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ajouter_produit"
                android:id="@+id/loginText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/errorMessage"
                android:background="@drawable/custom_texteditfield"
                android:drawableStart="@drawable/ic_error_24px"
                android:hint="@string/eroare"
                android:padding="8dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/idNomAdminPosterProduit"
                android:background="@drawable/custom_texteditfield"
                android:drawablePadding="8dp"
                android:hint="@string/nom"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:id="@+id/idAdminDescriptionProduit"
                android:background="@drawable/custom_texteditfield"
                android:drawablePadding="8dp"
                android:hint="@string/description_produitt"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:inputType="textCapSentences|textNoSuggestions|textMultiLine"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/idAjouterProduitPoster"
                android:text="@string/ajouter_produit"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/colorAccent"
                app:cornerRadius = "20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/idMenu"
                android:text="@string/renoncer"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/colorAccent"
                app:cornerRadius = "20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>