<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:backgroundTint="@color/buttonback"
        >



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:padding="7dp"

            >


            <EditText
                android:id="@+id/nomUtl"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:focusable="false"
                android:background="@drawable/custom_texteditfield"
                android:drawableLeft="@drawable/ic_user_24px"
                android:drawablePadding="8dp"
                android:hint="@string/nom"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="7dp" />

            <EditText
                android:id="@+id/emailUtl"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:focusable="false"
                android:background="@drawable/custom_texteditfield"
                android:drawableLeft="@drawable/ic_email_24px"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                app:layout_constraintTop_toBottomOf="@+id/nomUtl"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/telephoneUtl"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:focusable="false"
                android:background="@drawable/custom_texteditfield"
                android:drawableLeft="@drawable/ic_telephone_24px"
                android:drawablePadding="8dp"
                android:hint="@string/numero"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                app:layout_constraintTop_toBottomOf="@+id/emailUtl"
                tools:layout_editor_absoluteX="7dp"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/dateNaissUtl"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_texteditfield"
                android:drawableLeft="@drawable/ic_calendar_24px"
                android:drawablePadding="8dp"
                android:focusable="false"
                android:hint="@string/date"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                app:layout_constraintTop_toBottomOf="@+id/telephoneUtl"
                tools:layout_editor_absoluteX="7dp"
                android:layout_marginTop="20dp"/>


            <EditText
                android:id="@+id/pointsUtl"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_texteditfield"
                android:drawableLeft="@drawable/ic_points_24px"
                android:drawablePadding="8dp"
                android:focusable="false"
                android:hint="@string/points"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                app:layout_constraintTop_toBottomOf="@+id/dateNaissUtl"
                tools:layout_editor_absoluteX="7dp"
                android:layout_marginTop="20dp"/>







            <Button
                android:id="@id/diminuer"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/diminuer"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pointsUtl"
                app:layout_constraintVertical_bias="0.0"
                app:cornerRadius = "20dp"/>

            <Button
            android:id="@id/faireAdmin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/creation_admin"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/diminuer"
                app:layout_constraintVertical_bias="0.0"
                app:cornerRadius = "20dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>

